Release versão 1.2 beta